force-app/main/default/objects/custom_create365__c/custom_create365__c.object-meta.xml
<CustomObject>
    <label>Custom created object365</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects365</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>