force-app/main/default/objects/custom_create365__c/fields/custom_create_365field652__c.field-meta.xml
<CustomField>
    <fullName>custom_create_365field652__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 365field652</label>
    <type>Checkbox</type>
</CustomField>