force-app/main/default/objects/custom_create365__c/fields/custom_create_365field660__c.field-meta.xml
<CustomField>
    <fullName>custom_create_365field660__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 365field660</label>
    <type>Checkbox</type>
</CustomField>